--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-SECRET_KEY=your_secret_key_here
+SECRET_KEY=chave-secreta-padrao
 DATABASE_URL=sqlite:///app.db
-FLASK_ENV=development 
+FLASK_ENV=development
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin
