--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,8 @@
-alembic==1.14.0
-bidict==0.23.1
-blinker==1.9.0
-click==8.1.7
-dnspython==2.7.0
-eventlet==0.38.0
-Flask==3.1.0
-Flask-Migrate==4.0.7
-Flask-SocketIO==5.4.1
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.2
-greenlet==3.1.1
-h11==0.14.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
-Mako==1.3.6
-MarkupSafe==3.0.2
-python-engineio==4.10.1
-python-socketio==5.11.4
-simple-websocket==1.1.0
-SQLAlchemy==2.0.36
-typing_extensions==4.12.2
-Werkzeug==3.1.3
-wsproto==1.2.0
-WTForms==3.2.1
+SQLAlchemy
+Flask
+flask_socketio
+flask_sqlalchemy
+flask_migrate
+flask_wtf
+eventlet
+datetime
